--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ h1{
 }
 
 h2{
-    font-size: 50px;
+    font-size: 42px;
 }
 
 /* !UTILS */
@@ -158,6 +158,14 @@ h2{
         flex-basis: 40%;
         min-height: 400px;
         background-color: blueviolet;
+    }
+
+    /* OPERATIONS SECTION */
+
+    .operations .column{
+        min-height: 500px;
+        flex-basis: calc(100%/3);
+        background-color: cadetblue;
     }
 
 
