--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
 
 :root {
     --blue: rgb(0,97,255);
+    --blue-hoover: rgb(86, 151, 255);
     --skyblue: rgb(180,208,231);
     --aquablue: rgb(0,147,206);
     --darkblue: rgb(13,36,129);
@@ -36,19 +37,41 @@ h2{
     font-size: 42px;
 }
 
+ul{
+    list-style-type: none;
+}
+
+.button{
+    border: none;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: white;
+    background-color: var(--blue);
+    display: inline-block;
+}
+
+.button:hover{
+    text-shadow: 0 0 5px white;
+    background-color: var(--blue-hoover);
+}
+
 /* !UTILS */
 
 .container{
-    max-width: 1000px;
+    max-width: 800px;
     margin: 0 auto;
 }
 
 .container.big{
-    max-width: 1200px;
+    max-width: 1000px;
 }
 
 .flex {
     display: flex;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
 }
 
 .mb-150{
@@ -74,25 +97,51 @@ h2{
 
     header nav{
         height: 80px;
+        background-color: white;
         position: fixed;
         top: 0;
         left: 0;
         right: 0;
-        background-color: blue;
         justify-content: space-between;
         align-items: center;
     }
 
     .sidenav{
-        background-color: blueviolet;
         height: 100%;
-        width: 30%;
+        padding: 0 15px;
     }
+
+    .sidenav.right{
+        justify-content: flex-end;
+    }
+
+    .logo{
+        flex: 0 0 20%;
+        padding-right: 15px;
+        align-items: center;
+    }
+
+    .sidenav ul{
+        align-items: center;
+    }
+    
+    .sidenav .link{
+        text-decoration: none;
+        color: black;
+        display: inline-block;
+        line-height: 80px;
+        padding: 0 15px;
+    }
+
+    .sidenav .link:hover{
+        border-bottom: 3px solid black;
+    }
+
+
 
     /* JUMBOTRON */
 
     .jumbotron{
-        min-height: 600px;
         background-color: var(--skyblue);
         padding-top: 100px;
     }
@@ -103,18 +152,20 @@ h2{
     }
 
     .jumbotron .row{
-        flex: 1 0 500px;
+        max-height: 330px;
         width: 100%;
     }
 
     .jumbotron .description{
-        flex-basis: 30%;
-        background-color: brown;
+        flex-basis: 35%;
     }
 
     .jumbotron figure{
-        flex-basis: 70%;
-        background-color: chartreuse;
+        flex-basis: 65%;
+    }
+
+    .jumbotron img{
+        max-width: 100%;
     }
 
 /* !MAIN */
