--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,7 @@ ul{
         top: 0;
         left: 0;
         right: 0;
+        z-index: 1;
         justify-content: space-between;
         align-items: center;
     }
