--- a/css/styles.css
+++ b/css/styles.css
@@ -456,7 +456,7 @@ footer{
     background-color: black;
     color: white;
     margin-top: 150px;
-    height: 600px;
+    height: 500px;
 }
 
 footer .container{
@@ -465,23 +465,53 @@ footer .container{
 
 .footer-top{
     height: 80%;
-    padding: 50px 0;
+    padding: 100px 0;
+    font-size: 14px;
 }
 
 .footer-bottom{
     height: 20%;
+    font-size: 10px;
 }
 
 .footer-top .col{
     flex-basis: 20%;
     height: 100%;
-    background-color: brown;
+}
+
+footer a{
+    text-decoration: none;
+    color: white;
+}
+
+footer a:hover{
+    text-decoration: underline;
+}
+
+footer li{
+    padding: 5px 0;
 }
 
 .language-selection{
     height: 100%;
-    width: 15%;
+    width: 10%;
+    align-items: center;
+    border-top: 1px solid white;
 }
+
+#language{
+    background-color: black;
+    color: white;
+    border: none;
+    -webkit-appearance: none;
+}
+
+footer .fa-solid{
+    vertical-align: middle;
+    padding: 5px;
+}
+
+
 
 
 
