--- a/css/styles.css
+++ b/css/styles.css
@@ -58,11 +58,6 @@ ul{
     display: inline-block;
 }
 
-.button:hover{
-    text-shadow: 0 0 5px white;
-    background-color: var(--blue-hoover);
-}
-
 /* !UTILS */
 
 .container{
@@ -113,6 +108,11 @@ ul{
 
 /* !HEADER */
 
+header a{
+    text-decoration: none;
+    color: black;
+}
+
     /* NAVBAR */ 
 
     header nav{
@@ -147,8 +147,6 @@ ul{
     }
     
     .sidenav .link{
-        text-decoration: none;
-        color: black;
         display: inline-block;
         line-height: 80px;
         padding: 0 15px;
@@ -162,31 +160,31 @@ ul{
 
     /* JUMBOTRON */
 
-    .jumbotron{
+    #jumbotron{
         background-color: var(--skyblue);
         padding-top: 100px;
         font-size: 14px;
     }
 
-    .jumbotron .container{
+    #jumbotron .container{
         flex-direction: column;
         align-items: center;
     }
 
-    .jumbotron .row{
+    #jumbotron .row{
         max-height: 300px;
         width: 100%;
     }
 
-    .jumbotron .description{
+    #jumbotron .description{
         flex-basis: 30%;
     }
 
-    .jumbotron figure{
+    #jumbotron figure{
         flex-basis: 70%;
     }
 
-    .jumbotron img{
+    #jumbotron img{
         max-width: 100%;
     }
 
@@ -194,7 +192,7 @@ ul{
 
     /* BUSINESS PLAN SECTION */
 
-    .business-plan{
+    #business-plan{
         font-size: 12px;
     }
 
@@ -219,20 +217,20 @@ ul{
         margin-right: 50px;
     }
 
-    .business-plan .row{
+    #business-plan .row{
         width: 100%;
     }
 
-    .business-plan .row.flex{
+    #business-plan .row.flex{
         gap: 40px;
     }
 
-    .business-plan .col{
+    #business-plan .col{
         flex-basis: calc(100%/3);
         min-height: 800px;
     }
 
-    .business-plan .button{
+    #business-plan .button{
         width: 100%;
         text-align: center;
     }
@@ -260,7 +258,7 @@ ul{
         min-height: 125px;
     }
 
-    .business-plan li{
+    #business-plan li{
         display: flex;
         margin-bottom: 10px;
     }
@@ -271,7 +269,7 @@ ul{
         margin-right: 5px;
     }
 
-    .business-plan hr{
+    #business-plan hr{
         width: 20%;
         height: 1px;
         color: var(--gray);
@@ -306,17 +304,17 @@ ul{
 
     /* PARTNER SECTION  */
 
-    .partner figure{
+    #partner figure{
         flex-basis: 60%;
         min-height: 400px;
     }
 
-    .partner img{
+    #partner img{
         width: 100%;
         display: block;
     }
 
-    .partner .description{
+    #partner .description{
         flex-basis: 40%;
         min-height: 400px;
         padding: 40px;
@@ -331,23 +329,23 @@ ul{
 
     /* OPERATIONS SECTION */
 
-    .operations{
+    #operations{
         font-size: 14px;
     }
 
-    .operations .col{
+    #operations .col{
         min-height: 450px;
         flex-basis: calc(100%/3);
         padding: 0 15px;
     }
 
-    .operations img{
+    #operations img{
         max-width: 100%;
     }
 
     /* REVIEWS SECTION */
 
-    .reviews > div{
+    #reviews > div{
         flex-basis: calc(100%/3);
         min-height: 600px;
     }
@@ -415,24 +413,24 @@ ul{
 
     /* FREE TRIAL SECTION */
 
-    .free-trial{
+    #free-trial{
         background-color: var(--skyblue);
         color: var(--bordeaux);
         padding: 150px 0;
     }
 
-    .free-trial .title{
+    #free-trial .title{
         flex-basis: 60%;
     }
 
-    .free-trial .action{
+    #free-trial .action{
         flex-basis: 40%;
         font-size: 12px;
         text-align: end;
         padding-top: 15px;
     }
 
-    .free-trial .button.white{
+    #free-trial .button.white{
         border: none;
         color: black;
         padding: 5px 25px;
@@ -440,7 +438,7 @@ ul{
 
     /* FAQ SECTION */
 
-    .faq .row{
+    #faq .row{
         padding: 25px 0;
         width: 100%;
         justify-content: space-between;
@@ -511,9 +509,31 @@ footer .fa-solid{
     padding: 5px;
 }
 
+/* !ANIMATIONS */
 
+.button:hover{
+    filter:brightness(1.2); 
+}
 
+.button.white:hover{
+    filter:brightness(1.1); 
+}
 
+.fa-arrow-down{
+    position: relative;
+    animation: bounce 1s infinite;
+}
 
+@keyframes bounce{
+    0%{
+        bottom: 0;
+    }
+    50%{
+        bottom: 20px;
+    }
+    100%{
+        bottom: 0;
+    }
+}
 
 
