--- a/css/styles.css
+++ b/css/styles.css
@@ -369,6 +369,7 @@ header a{
         height: 50%;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
     }
 
     .reviewers img{
@@ -380,7 +381,6 @@ header a{
 
         #designit{
             background-color: var(--green);
-            border: 15px solid var(--lightgreen);
         }
 
         #asu{
@@ -536,4 +536,42 @@ footer .fa-solid{
     }
 }
 
+.reviewer-logo:hover{
+    animation: pulse 0.5s 3 alternate forwards;
+}
 
+@keyframes pulse{
+    0%{
+        border: 0px solid rgba(255, 255, 255, 0.5);
+    }
+    10%{
+        border: 1px solid rgba(255, 255, 255, 0.5);
+    }
+    20%{
+        border: 2px solid rgba(255, 255, 255, 0.5);
+    }
+    30%{
+        border: 3px solid rgba(255, 255, 255, 0.5);
+    }
+    40%{
+        border: 4px solid rgba(255, 255, 255, 0.5);
+    }
+    50%{
+        border: 5px solid rgba(255, 255, 255, 0.5);
+    }
+    60%{
+        border: 6px solid rgba(255, 255, 255, 0.5);
+    }
+    70%{
+        border: 7px solid rgba(255, 255, 255, 0.5);
+    }
+    80%{
+        border: 8px solid rgba(255, 255, 255, 0.5);
+    }
+    90%{
+        border: 9px solid rgba(255, 255, 255, 0.5);
+    }
+    100%{
+        border: 10px solid rgba(255, 255, 255, 0.5);
+    }
+}
