--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* !CSS RESET */
+/*! CSS RESET */
 
 *{
     margin: 0;
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 
-/* !CUSTOM PROPERTIES */
+/*! CUSTOM PROPERTIES */
 
 :root {
     --blue: rgb(0,97,255);
@@ -25,7 +25,7 @@
     --cream: rgb(245,245,245);
 }
 
-/* !GENERICS */
+/*! GENERICS */
 
 body{
     font-family: 'Open Sans', sans-serif;
@@ -45,18 +45,68 @@ h3{
     font-size: 22px
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
+.blue-link{
+    color: blue;
+    text-decoration: underline;
+}
+
+.blue-link:visited{
+    color: blue;
+}
+
 ul{
     list-style-type: none;
 }
 
-.button{
-    border: none;
-    padding: 5px 10px;
-    text-decoration: none;
-    color: white;
-    background-color: var(--blue);
-    display: inline-block;
+img{
+    max-width: 100%;
+    display: block;
 }
+
+    /*+ BUTTONS */
+
+    .btn{
+        border: none;
+        text-decoration: none;
+        display: inline-block;
+        padding: 5px 10px;
+    }
+
+    .btn-full-width{
+        width: 100%;
+        text-align: center;
+    }
+
+    .btn-blue{
+        color: white;
+        background-color: var(--blue);
+    }
+
+    .btn-white{
+        background-color: white;
+    }
+
+    .btn-bordered{
+        color: var(--buttongray);
+        border: 1px solid currentColor;
+    }
+
+    /*+ BTN HOVER  */
+
+    .btn-blue:hover{
+        filter: brightness(1.3);
+    }
+
+    .btn-white:hover{
+        filter: contrast(1.2);
+    }
+
+    
 
 /* !UTILS */
 
@@ -108,12 +158,7 @@ ul{
 
 /* !HEADER */
 
-header a{
-    text-decoration: none;
-    color: black;
-}
-
-    /* NAVBAR */ 
+    /*# NAVBAR */ 
 
     header nav{
         height: 80px;
@@ -146,24 +191,25 @@ header a{
         align-items: center;
     }
     
-    .sidenav .link{
+    .nav-button{
         display: inline-block;
         line-height: 80px;
         padding: 0 15px;
     }
 
-    .sidenav .link:hover{
+    .nav-button:hover{
         border-bottom: 3px solid black;
     }
 
 
 
-    /* JUMBOTRON */
+    /*# JUMBOTRON */
 
     #jumbotron{
         background-color: var(--skyblue);
         padding-top: 100px;
         font-size: 14px;
+        height: 650px;
     }
 
     #jumbotron .container{
@@ -172,7 +218,6 @@ header a{
     }
 
     #jumbotron .row{
-        max-height: 300px;
         width: 100%;
     }
 
@@ -184,13 +229,9 @@ header a{
         flex-basis: 70%;
     }
 
-    #jumbotron img{
-        max-width: 100%;
-    }
-
 /* !MAIN */
 
-    /* BUSINESS PLAN SECTION */
+    /*# BUSINESS PLAN SECTION */
 
     #business-plan{
         font-size: 12px;
@@ -200,7 +241,7 @@ header a{
         align-items: center;
     }
 
-    .circle{
+    .circle-btn{
         width: 20px;
         height: 20px;
         border: 2px solid gray;
@@ -209,7 +250,7 @@ header a{
         cursor: pointer;
     }
 
-    .circle.selected{
+    .circle-btn.selected{
         border: 5px solid var(--blue);
     }
 
@@ -228,11 +269,6 @@ header a{
     #business-plan .col{
         flex-basis: calc(100%/3);
         min-height: 800px;
-    }
-
-    #business-plan .button{
-        width: 100%;
-        text-align: center;
     }
 
     .plan-type{
@@ -288,62 +324,48 @@ header a{
         gap: 40px;
     }
 
-    .content.bottom > *{
-        padding: 25px 10px;
-    }
-
     .content.bottom .plan-name{
         flex-basis: calc((100% / 3 *2 ) + (80px / 3 * 2));
+        padding: 25px 10px 25px 0;
     }
 
     .content.bottom .contact-us{
         flex-basis: calc(100%/3);
+        padding: 25px 10px 25px 30px;
     }
 
     
 
-    /* PARTNER SECTION  */
+    /*# PARTNER SECTION  */
 
     #partner figure{
         flex-basis: 60%;
-        min-height: 400px;
-    }
-
-    #partner img{
-        width: 100%;
-        display: block;
     }
 
     #partner .description{
         flex-basis: 40%;
-        min-height: 400px;
         padding: 40px;
         font-size: 14px;
     }
 
-    .button.white{
-        color: var(--buttongray);
-        border: 1px solid var(--buttongray);
-        background-color: white;
-    }
-
-    /* OPERATIONS SECTION */
+    /*# OPERATIONS SECTION */
 
     #operations{
         font-size: 14px;
     }
 
+    #operations .row{
+        flex-wrap: wrap;
+        align-content: flex-start;
+        margin: 0 -15px;
+    }
+
     #operations .col{
-        min-height: 450px;
         flex-basis: calc(100%/3);
         padding: 0 15px;
     }
 
-    #operations img{
-        max-width: 100%;
-    }
-
-    /* REVIEWS SECTION */
+    /*# REVIEWS SECTION */
 
     #reviews > div{
         flex-basis: calc(100%/3);
@@ -353,10 +375,6 @@ header a{
     .feedback{
         background-color: var(--cream);
         padding: 40px;
-    }
-
-    .feedback img{
-        max-width: 50%;
     }
 
     .reviewers{
@@ -377,7 +395,7 @@ header a{
         max-width: 50%;
     }
 
-        /* COMPANIES BRANDS */
+        /*+ COMPANIES BRANDS */
 
         #designit{
             background-color: var(--green);
@@ -411,7 +429,7 @@ header a{
             background-color: var(--yellow);
         }
 
-    /* FREE TRIAL SECTION */
+    /*# FREE TRIAL SECTION */
 
     #free-trial{
         background-color: var(--skyblue);
@@ -430,13 +448,11 @@ header a{
         padding-top: 15px;
     }
 
-    #free-trial .button.white{
-        border: none;
-        color: black;
+    #free-trial .btn{
         padding: 5px 25px;
     }
 
-    /* FAQ SECTION */
+    /*# FAQ SECTION */
 
     #faq .row{
         padding: 25px 0;
@@ -447,11 +463,20 @@ header a{
 
     .fa-angle-down{
         padding: 0 20px;
+        transition: transform 0.5s;
     }
 
     .faq-answer{
         display: none;
         padding-bottom: 25px;
+    }
+
+    #faq .row:hover + .faq-answer{
+        display: block;
+    }
+    
+    #faq .row:hover .fa-angle-down{
+        transform: rotate(180deg);
     }
 
 /* !FOOTER */
@@ -480,11 +505,9 @@ footer .container{
 
 .footer-top .col{
     flex-basis: 20%;
-    height: 100%;
 }
 
 footer a{
-    text-decoration: none;
     color: white;
 }
 
@@ -515,15 +538,7 @@ footer .fa-solid{
     padding: 5px;
 }
 
-/* !ANIMATIONS */
-
-.button:hover{
-    filter:brightness(1.2); 
-}
-
-.button.white:hover{
-    filter:brightness(1.1); 
-}
+/*+ ANIMATIONS */
 
 .fa-arrow-down{
     position: relative;
@@ -582,10 +597,3 @@ footer .fa-solid{
     }
 }
 
-#faq .row:hover + .faq-answer{
-    display: block;
-}
-
-#faq .row:hover .fa-angle-down{
-    transform: rotate(180deg);
-}
