--- a/css/styles.css
+++ b/css/styles.css
@@ -368,8 +368,8 @@ img{
     /*# REVIEWS SECTION */
 
     #reviews > div{
-        flex-basis: calc(100%/3);
-        min-height: 600px;
+        flex-basis: calc(100vw/3);
+        height: calc(100vw/3);
     }
 
     .feedback{
@@ -402,7 +402,7 @@ img{
         z-index: -1;
         transition: left 1s;
         width: 100%;
-        height: 600px;
+        height: 100%;
     }
 
     .hidden.left{
