--- a/css/styles.css
+++ b/css/styles.css
@@ -195,6 +195,8 @@ img{
         display: inline-block;
         line-height: 80px;
         padding: 0 15px;
+        border-bottom: 3px solid transparent;
+
     }
 
     .nav-button:hover{
@@ -268,7 +270,6 @@ img{
 
     #business-plan .col{
         flex-basis: calc(100%/3);
-        min-height: 800px;
     }
 
     .plan-type{
@@ -584,6 +585,7 @@ img{
 
 /* !FOOTER */
 
+
 footer{
     background-color: black;
     color: white;
@@ -593,21 +595,6 @@ footer{
 
 footer .container{
     height: 100%;
-}
-
-.footer-top{
-    height: 80%;
-    padding: 100px 0;
-    font-size: 14px;
-}
-
-.footer-bottom{
-    height: 20%;
-    font-size: 10px;
-}
-
-.footer-top .col{
-    flex-basis: 20%;
 }
 
 footer a{
@@ -622,24 +609,44 @@ footer li{
     padding: 5px 0;
 }
 
-.language-selection{
-    height: 100%;
-    width: 10%;
-    align-items: center;
-    border-top: 1px solid white;
-}
+    /*# FOOTER TOP */
 
-#language{
-    background-color: black;
-    color: white;
-    border: none;
-    -webkit-appearance: none;
-}
+    .footer-top{
+        height: 80%;
+        padding: 100px 0;
+        font-size: 14px;
+    }
+    
+    .footer-top .col{
+        flex-basis: 20%;
+    }
 
-footer .fa-solid{
-    vertical-align: middle;
-    padding: 5px;
-}
+    /*# FOOTER BOTTOM */
+
+    .footer-bottom{
+        height: 20%;
+        font-size: 10px;
+    }
+
+    .language-selection{
+        height: 100%;
+        width: 10%;
+        align-items: center;
+        border-top: 1px solid white;
+        cursor: pointer;
+    }
+
+    #language{
+        background-color: black;
+        color: white;
+        border: none;
+        -webkit-appearance: none;
+    }
+
+    footer .fa-solid{
+        vertical-align: middle;
+        padding: 5px;
+    }
 
 /*+ ANIMATIONS */
 
